tests/compile/child_and_hub_flag_ambiguous.stderr
error: #[plexus_macros::activation(hub, ...)] cannot be combined with #[plexus_macros::child] methods — the macro infers hub-mode from the presence of #[child] methods. Remove the 'hub' flag or remove the #[child] methods.
  --> tests/compile/child_and_hub_flag_ambiguous.rs:35:1
   |
35 | / impl Mixed {
36 | |     #[plexus_macros::method]
37 | |     async fn ping(&self) -> impl Stream<Item = String> + Send + 'static {
38 | |         stream! { yield "pong".into(); }
...  |
45 | | }
   | |_^
